--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=todoapp
 server.port = 8081
 
 # Oracle DB Configuration
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=system
-spring.datasource.password=112233
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:${ORACLE_DB}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 # JPA/Hibernate Config
